--- a/css/moga.css
+++ b/css/moga.css
@@ -22,7 +22,7 @@
 	text-transform: uppercase;
 	font-size:32px;
 	text-align: center;
-    padding: 10px;
+    padding-left: 10px;
 
 }
 .about-section{
