--- a/css/moga.css
+++ b/css/moga.css
@@ -14,6 +14,7 @@
     padding: 100px 0;
     text-align: center;
     color: #fff;
+    background-color:black;
     background: url(http://us.cdn2828.fansshare.com/photos/yoga/rbrb-man-1179901918.jpg) no-repeat bottom center scroll;
     background-size: cover;
 }
