adding background image to webpage

--- a/css/moga.css
+++ b/css/moga.css
@@ -15,7 +15,7 @@
     text-align: center;
     color: #fff;
     background-color:black;
-    background: url(http://us.cdn2828.fansshare.com/photos/yoga/rbrb-man-1179901918.jpg) no-repeat bottom center scroll;
+    background: url(https://raw.githubusercontent.com/alejandro-londono/MOGA/gh-pages/img/b99126229z.1_20131104153427_000_g5037k64.1-0.jpg) no-repeat bottom center scroll;
     background-size: cover;
 }
 .light{
